homework-4-main/grammar.ebnf
program                 = function_definition+ ;
function_definition     = "fn" , identifier , "(" , [arguments] , ")" , "{" , [statement+] , "}" ;
arguments               = expression , { "," , expression } ;
statement               = variable_define , ";" | function_return , ";" ;
variable_define         = "let" , identifier , "=" , expression ;
function_return         = "return" , (function_call | expression | identifier) ;
function_call           = identifier , "(" , [arguments] , ")" ;
expression              = boolean | math_expression | function_call | number | string | identifier ;
math_expression         = value , { ("+" | "-") , value } ;
value                   = number | identifier | boolean ;
number                  = digit+ ;
boolean                 = "true" | "false" ;
string                  = "\"" , {alnum | " "} , "\"" ;
identifier              = alnum , {alnum} ;
alnum                   = ?alpha-numeric-character?;
digit                   = 0..9;
